# malcontext

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
api output references/: VT_FILE_BEHAVIOUR_GET.json  VT_FILE_GET.json  openapi.json  unpacme_search_terms.json
include/: ansi_colours.h  cJSON.h  config.h  configuration.h  context.h  dirent.h  help_custom.h  hybridanalysis.h  malpedia.h  malshare.h  malware_download.h  malwarebazaar.h  miscellaneous.h  search.h  unpac_me.h  virustotal.h  yara_x.h  yara_x_scan.h
src/: config.c  configuration.c  configuration_old.c  context.c  help_custom.c  main.c  malware_download.c  miscellaneous.c  search.c  yara_x_scan.c
src/api/: hybridanalysis.c  malpedia.c  malshare.c  malwarebazaar.c  unpac_me.c  virustotal.c
tests/: hashes.json
yara-x rules/: yara_x_rule_one.yara  yara_x_rule_three.yara  yara_x_rule_two.yara
